# STRFLNet

./: .gitignore  pyproject.toml
data/: SEED_Resorce.py  SEED_change.py  SEED_first_session.py  valid_data.py
model/: PLI.py  STODE6.py  crosstransformer_only.py  gode_ATFFNET_PLI.py  main_multi.py  main_nineTGtrans.py  main_single.py  model_nineTGtrans.py  selftransformer_temporal_position2.py  train.py
