[project]
name = "strflnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "mne>=1.12.1",
    "mne-connectivity>=0.8.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.12.1",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
